# rust-xmlsec

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  bindings.h  bindings.rs  build.rs
examples/: signature.rs
src/: bindings.rs  default_bindings.rs  error.rs  keys.rs  lib.rs  nodeset.rs  templates.rs  transforms.rs  xmldsig.rs  xmlenc.rs  xmlkeysmngr.rs  xmlsec.rs
src/crypto/: openssl.rs
src/exts/: xml.rs
tests/: test_dsig.rs  test_keys.rs  test_nodeset.rs  test_templating.rs
tests/resources/: sign2-tmpl-ns-prefix-dsig.xml  sign2-tmpl.xml  sign4-signed.xml
