[package]
name         = "xmlsec"
version      = "0.2.2"
authors      = ["Leonhard Weber <leonhard.weber@voipir.cl>"]
edition      = "2018"
readme       = "README.md"
license      = "MIT"
description  = "Wrapper for xmlsec1 library"
homepage     = "https://github.com/voipir/rust-xmlsec"
repository   = "https://github.com/voipir/rust-xmlsec"
keywords     = ["xml", "xmlsec", "dsig"]

build = "bindings.rs"

[dependencies]
libc        = {version = "^0.2"}
libxml      = {version = "^0.3"}
lazy_static = {version = "^1.4"}

[build-dependencies]
bindgen    = {version = "^0.59"}

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"

[target.'cfg(macos)'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(unix)'.build-dependencies]
pkg-config = "0.3"