[package]
name         = "xmlsec"
version = "1.0.0"
authors = [
    "Leonhard Weber <leonhard.weber@voipir.cl>",
    "Stefan Sommerfeld <stefan.sommerfeld@gmail.com>",
]
edition = "2021"
readme       = "README.md"
license      = "MIT"
description  = "Wrapper for xmlsec1 library"
homepage = "https://github.com/zerocom38/rust-xmlsec"
repository = "https://github.com/zerocom38/rust-xmlsec"
keywords     = ["xml", "xmlsec", "dsig"]
build = "build.rs"

[features]
default = ["vendored"]
vendored = []

[dependencies]
lazy_static = {version = "^1.4"}
libxml = "0.3"
openssl-sys = "0.9"
bitflags = "2.4"

[build-dependencies]
bindgen = { version = "^0.69" }
cc = "1.0"


[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"

[target.'cfg(macos)'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(unix)'.build-dependencies]
pkg-config = "0.3"
